# sample-kedro

./: .env.origin  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/iris/: README.md  nodes.py  pipeline.py  settings.py
src/sample_kedro/: __init__.py  __main__.py  nodes.py  pipeline.py  settings.py
src/tests/: test_pipeline.py  test_run.py
src/tests/pipelines/: test_pipeline.py
