[tool.poetry]
name = "sample-kedro"
version = "0.1.0"
description = ""
authors = ["u6k.apps@gmail.com"]
license = "MIT License"
readme = "README.md"
packages = [{include = "sample_kedro"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
kedro = "0.18.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.kedro]
package_name = "iris"
project_name = "Iris"
kedro_init_version = "0.18.8"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/iris -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[flake8]
max-line-length=88
extend-ignore=E203
