[tool.poetry]
name = "sample-kedro"
version = "0.1.0"
description = ""
authors = ["u6k.apps@gmail.com"]
license = "MIT License"
readme = "README.md"
packages = [{include = "sample_kedro"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
kedro = "0.18.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
