[tool.poetry]
name = "sample-kedro"
version = "0.1.0"
description = ""
authors = ["u6k.apps@gmail.com"]
license = "MIT License"
readme = "README.md"
packages = [{include = "sample_kedro"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
kedro = "0.18.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
kedro-datasets = "^1.3.0"
pyarrow = "^12.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.kedro]
package_name = "sample_kedro"
project_name = "Sample Kedro"
kedro_init_version = "0.18.8"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/sample_kedro -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
